2007-04-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/residue.h: Undo previous change. Rich Apodaca
	suggested some SWIG-fu instead.

	* scripts/ Update accordingly. Includes ruby changes, new README
	and examples.

2007-03-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/base.cpp: Additional "What's new" documentation for 2.1
	release.

	* include/openbabel/residue.h: Hide some residue names (e.g.,
	_1MG) from SWIG wrappers -- such constants are not valid symbols
	in some languages like Ruby.

	* scripts/ Update accordingly.

2007-03-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/: Updated interface wrappers, including new Java
	README. (Java is confirmed to work on Mac OS X.)

2007-03-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obconversion.cpp: Make sure to always return from any
	exception. Otherwise we could crash running code.

	* src/formats/mdlformat.cpp: Avoid infinite loop in
	ParseAliasText.

	* src/formats/acrformat.cpp: Minor formatting change.

	* test/Makefile.am, test/Makefile.in, test/wrapper.sh: Add
	inchiwrite tests to suite.

	* test/inchiwrite.cpp, test/inchi.pl: Formatting to integrate into
	Perl "prove" test suite.

2007-03-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* tools/obprop.cpp (main): Fix PR#1688251 with while/for loop on
	CML files. Thanks to Tapani Kinnunen for the report.

	* src/formats/mol2format.cpp: Fix problem reported by Noel with
	"USER_CHARGES" appearing instead of Gasteiger.

	* src/data.cpp, src/groupcontrib.cpp: Fix doxygen warnings.

	* include/openbabel/groupcontrib.h: Documentation fixes.

	* NEWS: Minor fixes.

	* doc/*.1, doc/*.html: Documentation updates.

2007-03-24  Benoit Jacob <jacob@math.jussieu.fr>

	* include/openbabel/atom.h, src/atom.cpp: Change SetVector to
	const parameter.

2007-03-23  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/psa.txt, data/mr.txt, data/logp.txt: Small changes -- DOS
	to UNIX line endings. 
