@@ -25,9 +25,9 @@
 [N]#*	23.79
 [N](-*)(=*)=*	11.68
 [N](=*)#*	13.60
-[N]1(-*)-*-*-*1	3.01
+[N]1(-*)-*-*1	3.01
 [NH](-*)-*	12.03
-[NH]1-*-*-*1	21.94
+[NH]1-*-*1	21.94
 [NH]=*	23.85
 [NH2]-*	26.02
 [N+](-*)(-*)(-*)-*	0.00
@@ -47,7 +47,7 @@
 [n+](-*)(:*):*	3.88
 [nH+](:*):*	14.14
 [O](-*)-*	9.23
-[O]1-*-*-*1	12.53
+[O]1-*-*1	12.53
 [O]=*	17.07
 [OH]-*	20.23
 [O-]-*	23.06
